--- a/source/css/cyberpunk.styl
+++ b/source/css/cyberpunk.styl
@@ -316,3 +316,28 @@ article.article
 
             &:hover, &:focus
                 background-color: darken($blue, 2.5%)
+
+.dfoot
+  position: relative
+  cursor: help
+  border-bottom: 1px dotted $yellow
+
+  &::after
+    content: attr(data-footnote)
+    position: absolute
+    bottom: 125%
+    left: 0
+    background-color: #333
+    color: #fff
+    padding: 6px 8px
+    border-radius: 6px
+    white-space: pre-wrap
+    width: 260px
+    z-index: 10
+    font-size: 0.9em
+    opacity: 0
+    transition: opacity 0.2s ease-in-out
+    pointer-events: none
+
+  &:hover::after
+    opacity: 1
